# umsl-cmp-sci-4500-project-snapshot-2019-04-14

./: CMakeLists.txt  README.md
python/: database.py  tableSQL.txt
python/base/: README.md  __init__.py
python/cozmonaut/: README.md  __main__.py
python/cozmonaut/entry_point/: __init__.py  friend_list.py  friend_remove.py  interact.py
src/: args.c  args.h  global.c  global.h  log.c  log.h  log_args.h  main.c  spsc.c  spsc.h  sys_client.h  sys_logging.h  sys_monitor.h  util.h  version.h
src/op/: friend_list.c  friend_list.h  friend_remove.c  friend_remove.h  go.c  go.h
